Modified it now so you can add stuff to the repost interface by right clicking on images

--- a/main.html
+++ b/main.html
@@ -73,8 +73,7 @@ a {
 </style>
 <!--<embed type="application/x-repost" id="pluginId">-->
 <script src="display.js"></script>
-<link href="tablecloth/tablecloth.css" rel="stylesheet" type="text/css" media="screen" />
-<script type="text/javascript" src="tablecloth/tablecloth.js"></script>
+<link href="repost.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body onload="main();">
 <div id="repost"></div>
