added some plugin stuff. trying to get the plugin to work

--- a/main.html
+++ b/main.html
@@ -71,12 +71,12 @@ a {
   color: #88C;
 }
 </style>
-<!--<embed type="application/x-repost" id="pluginId">-->
 <script src="display.js"></script>
 <link href="repost.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body onload="main();">
 <div id="repost"></div>
+<embed type="application/repostplugin" id="plugin" >
 </body>
 </html>
 
