added new pics and cleared up css and started to fiddle with table junk

--- a/main.html
+++ b/main.html
@@ -75,7 +75,7 @@ a {
 <link href="repost.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body onload="main();">
-<div id="repost"></div>
+<div id="repost" align=center></div>
 <embed type="application/repostplugin" id="plugin" >
 </body>
 </html>
