Few small changes to main page and the javascript. Trying to sort out the add and delete crap

--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@ a {
 </head>
 <body onload="main();">
 <div id="repost" align=center></div>
-<embed type="application/repostplugin" id="plugin" >
+<!-- <embed type="application/x-repostplugin","", id="plugin" > -->
 </body>
 </html>
 
