Change so linux recognises the plugin

--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@ a {
 </head>
 <body onload="main();">
 <div id="repost" align=center></div>
-<!-- <embed type="application/x-repostplugin","", id="plugin" > -->
+<object type="application/Reposter", id="plugin" >
 </body>
 </html>
 
