removed some crap

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 </head>
 <body onload="main();">
 <div id="repost" align=center></div>
-<object type="application/Reposter" id="plugin" width="0" height="0"> </object>
+<object type="application/reposter" id="plugin" width="0" height="0"> </object>
 </body>
 </html>
 
