--- a/options.html
+++ b/options.html
@@ -1,9 +1,10 @@
 <html>
 <head><title>Repost Options</title>
+<script src="settings.js"></script>
 <script src="options.js"></script>
 <link href="options.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
-<body onload="load_options();">
+<body onload="main();">
 <div id="repostoptions" align="center"></div>
 </body>
 </html>
