--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="settings.js"></script>
 <script src="display.js"></script>
 <link href="repost.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
