Css style updates. Moving post classes into own files. Making post images more generic during creation and sending

--- a/main.html
+++ b/main.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <script src="settings.js"></script>
+<script src="postimage.js"></script>
+<script src="posttext.js"></script>
 <script src="posttable.js"></script>
 <script src="display.js"></script>
 <link href="repost.css" rel="stylesheet" type="text/css" media="screen" />
