Adding the test for the visualisation library. Currently covers the whole screen on startup and puts up junk. Now moving to putting in actual repost data

--- a/main.html
+++ b/main.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="jit.js"></script>
+<script src="links.js"></script>
 <script src="settings.js"></script>
 <script src="postimage.js"></script>
 <script src="posttext.js"></script>
 <script src="posttable.js"></script>
 <script src="display.js"></script>
 <link href="repost.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="linkbox.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body onload="main();">
 <div id="repost" align=center></div>
+<div id="log" align=center></div>
 <object type="application/reposter" id="plugin" width="0" height="0"> </object>
 </body>
 </html>
