--- a/main.html
+++ b/main.html
@@ -14,6 +14,11 @@
 <div id="repost" align=center></div>
 <div id="log" align=center></div>
 <object type="application/reposter" id="plugin" width="0" height="0"> </object>
+<div id="welcome" align=center valign=middle>
+  <img src="welcome.jpeg" width=400px>
+  <br>
+  <img src="instructions.jpeg" width=300px>
+</div>
 </body>
 </html>
 
