--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
 <script src="settings.js"></script>
 <script src="postimage.js"></script>
 <script src="posttext.js"></script>
+<script src="textpostbox.js"></script>
 <script src="posttable.js"></script>
 <script src="display.js"></script>
 <link href="repost.css" rel="stylesheet" type="text/css" media="screen" />
@@ -15,9 +16,6 @@
 <div id="log" align=center></div>
 <object type="application/reposter" id="plugin" width="0" height="0"> </object>
 <div id="welcome" align=center valign=middle>
-  <img src="welcome.jpeg" width=400px>
-  <br>
-  <img src="instructions.jpeg" width=300px>
 </div>
 </body>
 </html>
