Added linkification to post texts. Also added some smarts to the textpostbox

--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
 <script src="settings.js"></script>
 <script src="postimage.js"></script>
 <script src="posttext.js"></script>
+<script src="ba-linkify.js"></script>
 <script src="textpostbox.js"></script>
 <script src="posttable.js"></script>
 <script src="display.js"></script>
