move css stuff into css dir, same with js stuff

--- a/main.html
+++ b/main.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="jquery-1.6.1.min.js"></script>
-<script src="jquery.lightbox-0.5.min.js"></script>
-<script src="jit.js"></script>
-<script src="links.js"></script>
-<script src="settings.js"></script>
-<script src="postimage.js"></script>
-<script src="posttext.js"></script>
-<script src="posttable.js"></script>
-<script src="display.js"></script>
+<script src="js/jquery-1.6.1.min.js"></script>
+<script src="js/jquery.lightbox-0.5.min.js"></script>
+<script src="js/jit.js"></script>
+<script src="js/links.js"></script>
+<script src="js/settings.js"></script>
+<script src="js/postimage.js"></script>
+<script src="js/posttext.js"></script>
+<script src="js/posttable.js"></script>
+<script src="js/display.js"></script>
 <script type="text/javascript">
     $(function() {
         $('a').lightBox(); // Select all links in the page
     });
 </script>
-<link href="repost.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="jquery.lightbox-0.5.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="css/repost.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="css/jquery.lightbox-0.5.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body onload="main();">
 <div id="repost" align=center></div>
