--- a/options.html
+++ b/options.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Repost Options</title>
-<script src="settings.js"></script>
-<script src="options.js"></script>
-<link href="options.css" rel="stylesheet" type="text/css" media="screen" />
+<script src="js/settings.js"></script>
+<script src="js/options.js"></script>
+<link href="css/options.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body onload="main();">
 <div id="repostoptions" align="center"></div>
