move all images into /images

--- a/main.html
+++ b/main.html
@@ -25,9 +25,9 @@
 <div id="log" align=center></div>
 <object type="application/reposter" id="plugin" width="0" height="0"> </object>
 <div id="welcome" align=center valign=middle>
-  <img src="welcome.jpeg" width=400px />
+  <img src="images/welcome.jpeg" width=400px />
   <br>
-  <img src="instructions.jpeg" width=300px />
+  <img src="images/instructions.jpeg" width=300px />
 </div>
 </body>
 </html>
