--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 <script src="js/status.js"></script>
 <script src="js/display.js"></script>
 <link href="css/repost.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="css/content.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/jquery.lightbox-0.5.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body onload="main();">
