some initial menu stuff

--- a/main.html
+++ b/main.html
@@ -19,7 +19,14 @@
 </head>
 <body onload="main();">
     <div id="repostMenu">
-        <span class="statusCircle">&nbsp;</span>
+        <h1 id="repostLogo">repost</h1>
+        <ul class="toolbar">
+            <!-- inverted because of the float:right css-->
+            <li><a href="#">CONNECTIONS</a><span class="statusCircle">&nbsp;</span></li>
+            <li><a href="#">SETTINGS</a></li>
+            <li><a href="#">POSTS</a></li>
+            <li><a href="#">HOME</a></li>
+        </ul>
     </div>
     <div id="repost"></div>
 <div id="repostContacts"></div>
