--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
 <script src="js/jquery-1.6.1.min.js"></script>
 <script src="js/jquery.lightbox-0.5.min.js"></script>
+<script src="js/jquery.masonry.min.js"></script>
 <script src="js/jit.js"></script>
 <script src="js/links.js"></script>
 <script src="js/settings.js"></script>
