Starting to move over to jquery

--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="js/jquery-1.6.1.min.js"></script>
+<script src="js/jquery-ui-1.8.14.custom.min.js"></script>
 <script src="js/jquery.lightbox-0.5.min.js"></script>
 <script src="js/jit.js"></script>
 <script src="js/links.js"></script>
@@ -13,6 +14,7 @@
 <script src="js/posttable.js"></script>
 <script src="js/status.js"></script>
 <script src="js/display.js"></script>
+<link href="css/jquery-ui-1.8.14.custom.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/repost.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/content.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/jquery.lightbox-0.5.css" rel="stylesheet" type="text/css" media="screen" />
