Now shows grey box

--- a/main.html
+++ b/main.html
@@ -20,25 +20,26 @@
 <link href="css/jquery.lightbox-0.5.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body onload="main();">
-    <div id="repostMenu">
-        <h1 id="repostLogo">repost</h1>
-        <ul class="toolbar">
-            <!-- inverted because of the float:right css-->
-            <li><a href="#">CONNECTIONS</a><span class="statusCircle">&nbsp;</span></li>
-            <li><a href="#">SETTINGS</a></li>
-            <li><a href="#">POSTS</a></li>
-            <li><a href="#">HOME</a></li>
-        </ul>
+    <object type="application/reposter" id="plugin" width="0" height="0"> </object>
+    <div id="repost">
+        <div id="repostMenu">
+            <h1 id="repostLogo">repost</h1>
+            <ul class="toolbar">
+                <!-- inverted because of the float:right css-->
+                <li><a href="#">CONNECTIONS</a><span class="statusCircle">&nbsp;</span></li>
+                <li><a href="#">SETTINGS</a></li>
+                <li><a href="#">POSTS</a></li>
+                <li><a href="#">HOME</a></li>
+            </ul>
+        </div>
+        <div id="repostContacts"></div>
+        <div id="log" align=center></div>
+        <div id="welcome" align=center valign=middle>
+          <img src="images/welcome.jpeg" width=400px />
+          <br>
+          <img src="images/instructions.jpeg" width=300px />
+        </div>
     </div>
-    <div id="repost"></div>
-<div id="repostContacts"></div>
-<div id="log" align=center></div>
-<object type="application/reposter" id="plugin" width="0" height="0"> </object>
-<div id="welcome" align=center valign=middle>
-  <img src="images/welcome.jpeg" width=400px />
-  <br>
-  <img src="images/instructions.jpeg" width=300px />
-</div>
 </body>
 </html>
 
