Add repost logo

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
     <object type="application/reposter" id="plugin" width="0" height="0"> </object>
     <div id="repost">
         <div id="repostMenu">
-            <h1 id="repostLogo">repost</h1>
+            <img id="repostLogo" src='images/repost_logo.jpg'>
             <ul class="toolbar">
                 <!-- inverted because of the float:right css-->
                 <li><a href="#">CONNECTIONS</a><span class="statusCircle">&nbsp;</span></li>
