--- a/main.html
+++ b/main.html
@@ -25,7 +25,8 @@
             <img id="repostLogo" src='images/repost_logo.jpg'>
             <ul class="toolbar">
                 <!-- inverted because of the float:right css-->
-                <li><a href="#">CONNECTIONS</a><span class="statusCircle">&nbsp;</span></li>
+                <li><div class="statusCircle">&nbsp;</div></li>
+                <li><a href="#">CONNECTIONS</a></li>
                 <li><a href="#">SETTINGS</a></li>
                 <li><a href="#">POSTS</a></li>
                 <li><a href="#">HOME</a></li>
