Modal dialogs look cool now

--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
 <body onload="main();">
     <object type="application/reposter" id="plugin" width="0" height="0"> </object>
     <div id="repost">
+        <div id="mask"></div>
         <div id="repostMenu">
             <img id="repostLogo" src='images/repost_logo.jpg'>
             <ul class="toolbar">
