--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <script src="js/jquery.lightbox-0.5.min.js"></script>
 <script src="js/jit.js"></script>
 <script src="js/links.js"></script>
-<script src="js/settings.js"></script>
+<script src="js/common.js"></script>
 <script src="js/postimage.js"></script>
 <script src="js/posttext.js"></script>
 <script src="js/ba-linkify.js"></script>
