--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
 <script src="js/posttable.js"></script>
 <script src="js/status.js"></script>
 <script src="js/display.js"></script>
+<script src="js/jquery.masonry.min.js"></script>
 <link href="css/repost.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/Abel-Regular.ttf" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/content.css" rel="stylesheet" type="text/css" media="screen" />
@@ -35,11 +36,6 @@
         </div>
         <div id="repostContacts"></div>
         <div id="log" align=center></div>
-        <div id="welcome" align=center valign=middle>
-          <img src="images/welcome.jpeg" width=400px />
-          <br>
-          <img src="images/instructions.jpeg" width=300px />
-        </div>
         </div>
 </body>
 </html>
