initial help screen

--- a/main.html
+++ b/main.html
@@ -28,6 +28,7 @@
             <ul class="toolbar">
                 <!-- inverted because of the float:right css-->
                 <li><div class="statusCircle">&nbsp;</div></li>
+                <li><a id="helplink" href="#">HELP</a></li>
                 <li><a id="connlink" href="#">CONNECTIONS</a></li>
                 <li><a href="#">SETTINGS</a></li>
                 <li><a href="#">POSTS</a></li>
@@ -36,7 +37,7 @@
         </div>
         <div id="repostContacts"></div>
         <div id="log" align=center></div>
-        </div>
+    </div>
 </body>
 </html>
 
